# maestro-gsm

./: FRESHBUILD  Makefile.am  autogen.sh  config.h.in  configure.ac  types.h
src/: Makefile.am  gsm.c  gsm.h  gsmat.c  gwgsm.c  log.c  log.h  log_files.h  serial.c  serial.h
